kubernetes/scheduler/pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: api-test
  namespace: net-lab
spec:
  serviceAccountName: reader
  containers:
  - name: test
    image: nicolaka/netshoot
    command: ["sh","-c","sleep 3600"]
