kubernetes/scheduler/scheduler.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: net-lab
spec:
  replicas: 13
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - web
            topologyKey: kubernetes.io/hostname 
      containers:
      - name: nginx
        image: nginx
        resources:
          requests:
            cpu: 700m
            memory: 100Mi
      tolerations:
      - key: "dedicated"
        operator: "Equal"
        value: "web"
        effect: "NoSchedule"
